Fix alignment of table cells

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -16,3 +16,8 @@ a {
 h2, .bold {
   font-family: "Archivo Black", sans-serif;
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
